# ast.obsolete

./: .gitignore  CHANGES.txt  INSTALL.txt  LICENSE.txt  Makefile.am  README.txt  ast.ipr  build.xml  configure  configure.ac  pom.xml
doc/: Makefile.am  astinternals.html  astuserman.html  cmanual.html  javamanual.html
intellij/: ast.ipr  ast.iws
src/main/c/: ast.h  ast_runtime.h
src/main/c/runtime/: Makefile.am  ast.h  ast_debug.h  ast_runtime.c
src/main/java/ast/Lc/: CGenerator.java
src/main/java/ast/Ljava/: JavaGenerator.java  JavaSemantics.java
src/main/java/ast/c/: CGenerator.java  CSemantics.java
src/main/java/ast/compiler/: AST.java  ASTDefault.java  ASTFactory.java  ASTFactoryDefault.java  AuxFcns.java  Constant.java  Debug.java  Generator.java  Main.java  Printer.java  ProtobufParser.java  ProtobufSemantics.java  issues  protobuf.y  todo
src/main/java/ast/compiler/generators/: CGenerator.java  CSemantics.java  JavaGenerator.java  JavaSemantics.java
src/main/java/ast/compiler/language/: CGenerator.java  CSemantics.java  JavaGenerator.java  JavaSemantics.java
src/main/java/ast/runtime/: ASTBuffer.java  ASTException.java  AbstractIO.java  ByteBuffer.java  ByteIO.java  Internal.java  Runtime.java
src/main/java/gnu/: Getopt.java  LongOpt.java
src/main/java/unidata/ast/compiler/: AST.java  ASTDefault.java  ASTFactory.java  ASTFactoryDefault.java  AuxFcns.java  Constant.java  Debug.java  Generator.java  Main.java  Printer.java  ProtobufActions.java  ProtobufLexer.java  ProtobufParser.java  ProtobufSemantics.java  Runtime.java  Semantics.java
src/main/java/unidata/ast/compiler/generators/c/: CGenerator.java  CSemantics.java  Generator.java  Semantics.java
src/main/java/unidata/ast/compiler/generators/java/: Generator.java  Semantics.java
src/main/java/unidata/ast/runtime/: ASTException.java  ASTRuntime.java  ASTRuntimeException.java  AbstractIO.java  AbstractMessage.java  ByteBuffer.java  ByteIO.java  Coding.java  Encoding.java  FileIO.java  IntBuffer.java  Internal.java  LongBuffer.java  ProtobufEncoding.java  ProtobufRuntime.java  XDREncoding.java  XDRRuntime.java
src/main/java/unidata/ast/runtime/xdr/: Internal.java
src/test/c/: Makefile.am  ast.h
src/test/java/ast/test/: Make0
src/test/java/unidata/ast/test/: Bytetests.proto  Enumtests.proto  Make0  Msgtests.proto  Primtests.proto
